@@ -356,6 +356,11 @@ Lintian-Tags: font-package-not-multi-arch-foreign
 Fix-Script: debian-rules-not-executable.py
 Lintian-Tags: debian-rules-not-executable
 
+Fix-Script: no-section-field.py
+Lintian-Tags:
+  no-section-field,
+  no-section-field-for-source
+
 Fix-Script: wrong-section-according-to-package-name.py
 Lintian-Tags: wrong-section-according-to-package-name
 
