@@ -1,0 +1,3 @@
+Section field set for binary packages node-foo, python-blah based on name.
+Certainty: certain
+Fixed-Lintian-Tags: no-section-field
