@@ -10,6 +10,7 @@ lintian-brush (0.69) UNRELEASED; urgency=medium
     of lintian-brush. Closes: #961810
   * Add really basic package-has-no-description fixer. Certainty for
     this fixer is set to 'possible', so it is not run by default.
+  * Add fixer for no-section-field and no-section-field-for-source.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 26 May 2020 11:51:16 +0000
 
